test/classes/initializers/errors/grandFieldUse.good
grandFieldUse.chpl:15: In initializer:
grandFieldUse.chpl:16: error: Parent field "x" used before it is initialized
